<resources>
    <string name="app_name">Rick &amp; Morty</string>
    <string name="name">Name: </string>
    <string name="gender">Gender: </string>
    <string name="location">Location: </string>
    <string name="origin">Origin: </string>
    <string name="status">Status: </string>
    <string name="created">Created: </string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="location_name">Name</string>
    <string name="species">Species</string>
    <string name="dimension">Dimension</string>
    <string name="type">Type</string>
    <string name="dimension_details">Dimension:</string>
    <string name="type_details">Type:</string>
    <string name="airdate">airDate</string>
    <string name="episode">Episode</string>
    <string name="air_date_details">Air-date:</string>
    <string name="episode_deyails">Episode:</string>
    <string name="species_details">Species:</string>
</resources>