<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_margin"
        android:layout_marginLeft="@dimen/sixteen_margin"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/four_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/characterAvatar"
            android:layout_width="@dimen/avatar_small_size"
            android:layout_height="@dimen/avatar_small_size"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/characterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/four_margin"
            android:text="@string/status"
            android:textSize="@dimen/sixteen_text_size" />
    </LinearLayout>


    <TextView
        android:id="@+id/characterGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_margin"
        android:layout_marginRight="@dimen/sixteen_margin"
        android:layout_marginBottom="@dimen/twenty_four_margin"
        android:text="@string/gender"
        android:textSize="@dimen/sixteen_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/characterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_margin"
        android:layout_marginLeft="@dimen/sixteen_margin"
        android:layout_marginEnd="@dimen/sixteen_margin"
        android:layout_marginTop="@dimen/eight_margin"
        android:fontFamily="serif"
        android:text="@string/name"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/twenty_three_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/characterSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_margin"
        android:layout_marginLeft="@dimen/sixteen_margin"
        android:layout_marginBottom="@dimen/twenty_four_margin"
        android:text="@string/species"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/sixteen_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_view_height"
        android:layout_marginStart="@dimen/sixteen_margin"
        android:layout_marginLeft="@dimen/sixteen_margin"
        android:layout_marginEnd="@dimen/sixteen_margin"
        android:layout_marginRight="@dimen/sixteen_margin"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>