<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/eight_margin">


    <TextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_margin"
        android:layout_marginLeft="@dimen/sixteen_margin"
        android:layout_marginTop="@dimen/four_margin"
        android:fontFamily="serif"
        android:text="@string/location"
        android:textSize="@dimen/twenty_three_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_margin"
        android:layout_marginRight="@dimen/sixteen_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        android:text="@string/type"
        android:textSize="@dimen/twenty_three_text_size"
        app:layout_constraintBottom_toBottomOf="@id/lineView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/locationDimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_margin"
        android:layout_marginLeft="@dimen/sixteen_margin"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        android:text="@string/dimension"
        android:textSize="@dimen/sixteen_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationName" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_view_height"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:background="@color/green_kislot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationDimension" />

</androidx.constraintlayout.widget.ConstraintLayout>